--- a/index.html
+++ b/index.html
@@ -23,18 +23,22 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <nav id="navbar">
-      <ul class="nav-list">
-        <li><a href="#welcome-section">About</a></li>
-        <li><a href="#projects">Work</a></li>
-        <li><a href="#contacts">Contact</a></li>
-      </ul>
-    </nav>
+    <header>
+      <nav id="navbar">
+        <ul class="nav-list">
+          <li><a href="#welcome-section">About</a></li>
+          <li><a href="#projects">Work</a></li>
+          <li><a href="#contacts">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
 
-    <section id="welcome-section">
-      <h1>Hey I am Mimic</h1>
-      <p>a web developer</p>
-    </section>
+    <main>
+      <section id="welcome-section">
+        <h1>Hey I am Mimic</h1>
+        <p>a web developer</p>
+      </section>
+    </main>
 
     <section id="projects">
       <h2 class="projects-header">These are some of my projects</h2>
